--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,7 +12,7 @@
     <div class="container">
       <h1 class="text-center">Edite su Blog a gusto</h1>
       <h4 class="text-center">Editara el blog con el id :</h4>
-      <form action="/articulos/<%= article.id %>" method="post">
+      <form action="/panel/admin/articulos/edit/<%= article.id %>" method="post">
         <div class="">
           <label for="title" class="form-label">Nuevo Titulo</label>
           <input
