--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,7 +11,7 @@
     <%-include("partials/NavBar")%>
     <div class="container mb-3">
       <h1 class="text-center">Cree su nuevo articulo</h1>
-      <form action="/articulos" method="post">
+      <form action="/panel/admin/articulos" method="post">
         <div>
           <label for="title" class="form-label">Ingrese un Titulo</label>
           <input class="form-control" type="text" id="title" name="titulo" required />
