--- a/views/articulos.ejs
+++ b/views/articulos.ejs
@@ -13,7 +13,7 @@
       <div>
         <h1 class="text-center"><%=article.title%></h1>
         <div class="d-flex">
-          <div class="col"></div>
+          <div class="col"><%= author.username %></div>
           <div class="col-6 text-center">
             <small>
               <!-- prettier-ignore -->
@@ -45,8 +45,13 @@
           <button class="btn btn-success" type="submit">Publicar</button>
         </div>
       </form>
-      <%}%>
-
+      <%}else {%>
+      <div class="row justify-content-center">
+        <div class="col-3">
+          <a href="/login" class="btn btn-success">Tienes que Iniciar sesión para comentar</a>
+        </div>
+      </div>
+      <% } %>
       <div>
         <h5 class="text-center">Comentarios</h5>
       </div>
