--- a/views/partials/admin-alerts.ejs
+++ b/views/partials/admin-alerts.ejs
@@ -8,7 +8,7 @@
       "¿Seguro que quieres eliminar este artículo?",
       function () {
         alertify.success("Artículo eliminado");
-        window.location.href = "/panel/admin/eliminar/" + id;
+        window.location.href = "/panel/admin/articulos/eliminar/" + id;
       },
       function () {
         alertify.error("Cancelado");
